--- a/event_planning/Views/Home/GetMyEvents.cshtml
+++ b/event_planning/Views/Home/GetMyEvents.cshtml
@@ -12,6 +12,7 @@
         <tr>
             <td><p>ID</p></td>
             <td><p>Название</p></td>
+            <td></td>
         </tr>
         @foreach (var item in Model)
         {
@@ -23,6 +24,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        <a href="/Home/Reg/@item.EventId">Открыть</a>
                     </td>
                 </tr>
             }
