--- a/event_planning/Views/Home/GetUsers.cshtml
+++ b/event_planning/Views/Home/GetUsers.cshtml
@@ -34,11 +34,11 @@
         <td>
             @Html.DisplayFor(modelItem => item.UserName)
         </td>
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>*@
+        <td>
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
+            @Html.ActionLink("Delete", "Delete", "Account", new { id=item.Id }, null)
+        </td>
     </tr>
 }
 
