--- a/event_planning/Views/Home/Reg.cshtml
+++ b/event_planning/Views/Home/Reg.cshtml
@@ -38,7 +38,7 @@
                 @Html.HiddenFor(m => m.Name)
                 @Html.HiddenFor(m => m.Id)
             </p>
-            <p><input type="submit" value="Зарегистрироваться" /></p>
+            <p><input type="submit" class="btn btn-primary" value="Зарегистрироваться" /></p>
         </fieldset>
     }
 </div>
