--- a/event_planning/Views/Home/GetUsers.cshtml
+++ b/event_planning/Views/Home/GetUsers.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<event_planning.Models.ApplicationUser>
 
 @{
-    ViewBag.Title = "Users";
+    ViewBag.Title = "Пользователи";
 }
 
-<h2>GetUsers</h2>
+<h2>Пользователи</h2>
 
 @*<p>
     @Html.ActionLink("Create New", "Create")
