--- a/event_planning/Views/Home/Reg.cshtml
+++ b/event_planning/Views/Home/Reg.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Регистрация на мероприятие</h2>
-<div>
+<div id="reg">
     <br /><p>Пользователь @User.Identity.GetUserName()</p>
     <h2>@Model.Name</h2>
     <div style="display: inline-block; margin: 15px; width: auto;">
