--- a/event_planning/Views/Manage/ChangePassword.cshtml
+++ b/event_planning/Views/Manage/ChangePassword.cshtml
@@ -3,12 +3,11 @@
     ViewBag.Title = "Смена пароля";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Форма смены пароля</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
