--- a/event_planning/Views/Manage/ManageLogins.cshtml
+++ b/event_planning/Views/Manage/ManageLogins.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Управление внешними именами входа";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 @{
