--- a/event_planning/Views/Shared/_Layout.cshtml
+++ b/event_planning/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     @Styles.Render("~/Content/Site.css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/scripts/JavaScript.js")
+    @Scripts.Render("~/scripts/jquery-3.3.1.js")
+    @Scripts.Render("~/scripts/jquery.validate.js")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
